# fastapi-samples

./: .env  README_zh.md
backend/: .env  .gitignore  BCRYPT_COMPATIBILITY_REPORT.md  Dockerfile  create_test_user.py  main.py  pyproject.toml  server.py  test_all_14_apis.py  test_api.py  test_apis_after_guest_removal.py  test_auth_complete.py  test_bcrypt_compatibility.py  test_bcrypt_in_production.py  test_complete_auth.py  test_dual_login_routes.py  test_email_validation.py  test_fixed_api.py  test_image_generation.py  test_login_and_apis.py  test_no_guest.py  test_register.py  test_simple.py  test_simple_apis.py  test_simple_chat.py
backend/app/: backend_pre_start.py  crud.py  initial_data.py  main.py  models.py  tests_pre_start.py  utils.py
backend/app/api/: deps.py  errors.py  main.py  routers.py
backend/app/api/routes/: ai_tools.py  auth.py  chat.py  documents.py  files.py  health.py  login.py  private.py  social.py  suggestions.py  users.py  utils.py  voting.py
backend/common/: __init__.py  emums.py  i18n.py  log.py  model.py  pagination.py
backend/common/exception/: errors.py  exception_handler.py
backend/common/response/: response_code.py  response_schema.py
backend/core/: config.py  db.py  path_config.py  register.py  security.py
backend/database/: db.py  redis.py
backend/docs/: nextjs_api.md
backend/middleware/: access_middleware.py  exception_middleware.py
backend/utils/: check.py  encrypt.py  serializers.py  snowflake.py  timezone.py
